reading and analyzing dataset

--- a/model.ipynb
+++ b/model.ipynb
@@ -30,7 +30,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.read_csv('./hmnist_28_28_RGB.csv')\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y = data['label']\n",
+    "print(type(Y))\n",
+    "print(Counter(Y))\n",
+    "nlabels = Y.value_counts().size\n",
+    "print(nlabels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data.drop(['label'],axis=1)\n",
+    "X = X/255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(X.shape)\n",
+    "print(Y.shape)"
+   ]
   }
  ],
  "metadata": {
