Balancing the dataset

--- a/model.ipynb
+++ b/model.ipynb
@@ -67,6 +67,55 @@
     "print(X.shape)\n",
     "print(Y.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smote = SMOTE(random_state = 50)\n",
+    "X_resample, Y_resample = smote.fit_resample(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(X_resample.shape)\n",
+    "print(Y_resample.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique, counts = np.unique(Y_resample, return_counts=True)\n",
+    "print(np.asarray((unique, counts)).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_resample = X_resample.values.reshape(-1,28,28,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_resample = tf.keras.utils.to_categorical(Y_resample, num_classes=nlabels)\n",
+    "print(Y_resample.shape)"
+   ]
   }
  ],
  "metadata": {
