--- a/model.ipynb
+++ b/model.ipynb
@@ -116,11 +116,154 @@
     "Y_resample = tf.keras.utils.to_categorical(Y_resample, num_classes=nlabels)\n",
     "print(Y_resample.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_resample, Y_resample, test_size=0.1, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(Y_train.shape)\n",
+    "print(X_train.shape)\n",
+    "print(Y_test.shape)\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CNN Architecture is In -> [[Conv2D->relu]*2 -> MaxPool2D -> Dropout]*2 ->\n",
+    "                           #Flatten -> Dense -> Dropout -> Out\n",
+    "model = models.Sequential()\n",
+    "\n",
+    "\n",
+    "model.add(layers.Conv2D(filters=64, kernel_size=(3,3), padding='Same',\n",
+    "                       activation='relu', input_shape=(28,28,3)))\n",
+    "model.add(layers.Conv2D(filters=64, kernel_size=(3,3), padding='Same',\n",
+    "                       activation='relu'))\n",
+    "model.add(layers.MaxPool2D(pool_size=(2,2)))\n",
+    "model.add(layers.Dropout(0.1))\n",
+    "\n",
+    "\n",
+    "model.add(layers.Conv2D(filters=64, kernel_size=(3,3), padding='Same',\n",
+    "                       activation='relu', input_shape = (28,28,3)))\n",
+    "model.add(layers.Conv2D(filters=64, kernel_size=(3,3), padding='Same',\n",
+    "                       activation='relu'))\n",
+    "model.add(layers.MaxPool2D(pool_size=(2,2)))\n",
+    "model.add(layers.Dropout(0.1))\n",
+    "\n",
+    "\n",
+    "model.add(layers.Conv2D(filters=64, kernel_size=(3,3), padding='Same',\n",
+    "                       activation='relu', input_shape = (28,28,3)))\n",
+    "model.add(layers.Conv2D(filters=64, kernel_size=(3,3), padding='Same',\n",
+    "                       activation='relu'))\n",
+    "model.add(layers.MaxPool2D(pool_size=(2,2)))\n",
+    "model.add(layers.Dropout(0.1))\n",
+    "\n",
+    "\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(64,activation='relu'))\n",
+    "model.add(layers.Dropout(0.1))\n",
+    "model.add(layers.Dense(nlabels,activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "augdata = ImageDataGenerator(\n",
+    "    featurewise_center=False,  # set input mean to 0 over the dataset\n",
+    "    samplewise_center=False,  # set each sample mean to 0\n",
+    "    featurewise_std_normalization=False,  # divide inputs by std of the dataset\n",
+    "    samplewise_std_normalization=False,  # divide each input by its std\n",
+    "    zca_whitening=False,  # apply ZCA whitening\n",
+    "    rotation_range=10,  # randomly rotate images in the range (degrees, 0 to 180)\n",
+    "    zoom_range=0.1,  # Randomly zoom image\n",
+    "    width_shift_range=0.1,  # randomly shift images horizontally (fraction of total width)\n",
+    "    height_shift_range=0.1,  # randomly shift images vertically (fraction of total height)\n",
+    "    horizontal_flip=True,  # randomly flip images\n",
+    "    vertical_flip=True,\n",
+    ")  # randomly flip images\n",
+    "\n",
+    "augdata.fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique, counts = np.unique(Y_resample, return_counts=True)\n",
+    "print(np.asarray((unique, counts)).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = model.fit(\n",
+    "    X_train,\n",
+    "    Y_train,\n",
+    "    epochs=10,\n",
+    "    verbose = 1,\n",
+    "    # validation_data = (X_val, Y_val),\n",
+    "#     steps_per_epoch = X_train.shape[0] // 128,\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
