--- a/model.ipynb
+++ b/model.ipynb
@@ -245,6 +245,148 @@
     "#     steps_per_epoch = X_train.shape[0] // 128,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the loss and accuracy curves for training and validation\n",
+    "fig, ax = plt.subplots(2,1)\n",
+    "ax[0].plot(data1.history['loss'], color='b', label=\"Training loss\")\n",
+    "# ax[0].plot(data1.history['val_loss'], color='r', label=\"Validation loss\",axes =ax[0])\n",
+    "legend = ax[0].legend(loc='best', shadow=True)\n",
+    "\n",
+    "\n",
+    "ax[1].plot(data1.history['accuracy'], color='b', label=\"Training accuracy\")\n",
+    "# ax[1].plot(data1.history['val_accuracy'], color='r',label=\"Validation accuracy\")\n",
+    "legend = ax[1].legend(loc='best', shadow=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.evaluate(X_test, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Look at confusion matrix\n",
+    "\n",
+    "\n",
+    "def plot_confusion_matrix(cm, classes,\n",
+    "                          normalize=False,\n",
+    "                          title='Confusion matrix',\n",
+    "                          cmap=plt.cm.Blues):\n",
+    "    \"\"\"\n",
+    "    This function prints and plots the confusion matrix.\n",
+    "    Normalization can be applied by setting `normalize=True`.\n",
+    "    \"\"\"\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "\n",
+    "    thresh = cm.max() / 2.\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, cm[i, j],\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')\n",
+    "\n",
+    "\n",
+    "# Predict the values from the validation dataset\n",
+    "Y_pred = model.predict(X_test)\n",
+    "# print(Y_pred)\n",
+    "# Convert predictions classes to one hot vectors\n",
+    "Y_pred_classes = np.argmax(Y_pred,axis = 1)\n",
+    "# print()\n",
+    "# print(Y_pred_classes)\n",
+    "# Convert validation observations to one hot vectors\n",
+    "Y_true = np.argmax(Y_test,axis = 1)\n",
+    "# print()\n",
+    "# print(Y_true)\n",
+    "# compute the confusion matrix\n",
+    "confusion_mtx = confusion_matrix(Y_true, Y_pred_classes)\n",
+    "# plot the confusion matrix\n",
+    "plot_confusion_matrix(confusion_mtx, classes = range(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display some error results\n",
+    "\n",
+    "\n",
+    "# Errors are difference between predicted labels and true labels\n",
+    "errors = (Y_pred_classes - Y_true != 0)\n",
+    "\n",
+    "\n",
+    "Y_pred_classes_errors = Y_pred_classes[errors]\n",
+    "Y_pred_errors = Y_pred[errors]\n",
+    "Y_true_errors = Y_true[errors]\n",
+    "X_val_errors = X_test[errors]\n",
+    "\n",
+    "\n",
+    "def display_errors(errors_index,img_errors,pred_errors, obs_errors):\n",
+    "    \"\"\" This function shows 6 images with their predicted and real labels\"\"\"\n",
+    "    n = 0\n",
+    "    nrows = 2\n",
+    "    ncols = 3\n",
+    "    fig, ax = plt.subplots(nrows,ncols,sharex=True,sharey=True)\n",
+    "    for row in range(nrows):\n",
+    "        for col in range(ncols):\n",
+    "            error = errors_index[n]\n",
+    "            ax[row,col].imshow((img_errors[error]))\n",
+    "            ax[row,col].set_title(\" Predicted :{} True :{}\".format(pred_errors[error],obs_errors[error]))\n",
+    "            n += 1\n",
+    "\n",
+    "\n",
+    "# Probabilities of the wrong predicted numbers\n",
+    "Y_pred_errors_prob = np.max(Y_pred_errors,axis = 1)\n",
+    "\n",
+    "\n",
+    "# Predicted probabilities of the true values in the error set\n",
+    "true_prob_errors = np.diagonal(np.take(Y_pred_errors, Y_true_errors, axis=1))\n",
+    "\n",
+    "\n",
+    "# Difference between the probability of the predicted label and the true label\n",
+    "delta_pred_true_errors = Y_pred_errors_prob - true_prob_errors\n",
+    "\n",
+    "\n",
+    "# Sorted list of the delta prob errors\n",
+    "sorted_dela_errors = np.argsort(delta_pred_true_errors)\n",
+    "\n",
+    "\n",
+    "# Top 6 errors\n",
+    "most_important_errors = sorted_dela_errors[-6:]\n",
+    "# print(X_val_errors[most_important_errors[5]].shape)\n",
+    "\n",
+    "# Show the top 6 errors\n",
+    "display_errors(most_important_errors, X_val_errors, Y_pred_classes_errors, Y_true_errors)\n"
+   ]
   }
  ],
  "metadata": {
